<resources>
    <string name="app_name">KeyPop</string>

    <string name="city_name">阿克苏信息中心</string>

    <string name="letter_digit_limit">
        0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ
    </string>


    <!--主界面-->
    <string name="titile">重点人群监控系统</string>
    <string name="peron_info">个人信息</string>
    <string name="change_pass">修改密码</string>
    <string name="logout">退出登录</string>


    <!--登录界面-->
    <string name="input_user_name">请输入用户名</string>
    <string name="input_pass_word">请输入登录密码</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="please_input_pass">请输入密码</string>
    <string name="login">登录</string>
    <string name="language_english">切换到维文</string>
    <string name="version_info">版本信息</string>


    <!--设备详情界面-->
    <string name="title_device_detail">设备详情</string>

    <!--聚集详情界面-->
    <string name="title_gather_detail">聚集详情</string>

    <!-- 消息详情界面-->
    <string name="title_msg_detial">消息详情</string>

    <!--人员详情界面-->
    <string name="title_member_detail">人员详情</string>

    <!--人员列表界面-->
    <string name="titile_member_list">人员列表</string>
    <string name="member_list_cancel">取消</string>
    <string name="member_list_ok">确定</string>


    <!--通讯录列表-->
    <string name="title_address_list">通讯录列表</string>

    <!--消息列表界面-->
    <string name="title_message_list">收到消息列表</string>

    <!--设备列表界面-->
    <string name="title_device_list">设备列表</string>
    <string name="title_gather_list">聚集列表</string>

    <!--查询人员及设备界面-->
    <string name="search">搜索</string>
    <string name="member_search_tips">请输入姓名/身份证号码</string>
    <string name="please_input_search_key">请输入搜索的关键字</string>
    <string name="device_search_tips">请输入设备号</string>
    <string name="equipment_hint">请输入查询设备号</string>
    <string name="equipment_search">查询</string>

    <!--人员详情界面-->
    <string name="member_info_name">姓名</string>
    <string name="member_info_age">年龄</string>
    <string name="member_info_idcard">身份证</string>
    <string name="member_info_membertype">人员类别</string>
    <string name="member_info_address">家庭住址</string>
    <string name="member_info_remark">备注</string>

    <!--异常列表信息-->
    <string name="titile_unusal_list">异常列表</string>

    <!--通讯录查询界面-->
    <string name="address_search_tips">请输入姓名/电话号码</string>
    <string name="tracking_title">轨迹追踪</string>
    <string name="un_tracking">未监控</string>
    <string name="tracking">监控中</string>
    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>
</resources>
