<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="false"
              tools:context="com.kp.monitor.ui.activity.LoginActivity"
              android:orientation="vertical">

    <com.hl.foundation.library.widget.CTopBar
        android:id="@+id/topbar"
        style="@style/style_topbar"
        app:mIsLeftShow="false"
        app:mTitleText="请登录">

    </com.hl.foundation.library.widget.CTopBar>


    <RelativeLayout
        android:padding="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <!--18765678987-->
            <EditText
                style="@style/style_edt_1"
                android:id="@+id/edt_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="12dp"
                android:hint="@string/input_user_name"
                android:text="" />

            <View style="@style/divider_thin"></View>

            <!--123456-->
            <EditText
                style="@style/style_edt_1"
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:digits="@string/letter_digit_limit"
                android:drawableLeft="@drawable/ic_pass"
                android:drawablePadding="12dp"
                android:text=""
                android:hint="@string/input_pass_word"
                android:inputType="textPassword"
                android:maxLength="@integer/pass_max_length" />

            <View style="@style/divider_thin"></View>

        </LinearLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/txt_forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ll_container"
            android:layout_marginTop="25dp"
            android:text="忘记密码" />


        <TextView
            android:id="@+id/txt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txt_forget_pass"
            android:layout_marginTop="55dp"
            android:background="@drawable/select_main_color"
            android:textColor="@color/colorTxtWhite"
            android:textSize="@dimen/font_16"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/login" />

        <TextView
            android:visibility="gone"
            android:id="@+id/txt_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txt_login"
            android:layout_marginTop="5dp"
            android:background="@drawable/select_main_color"
            android:textColor="@color/colorTxtWhite"
            android:textSize="@dimen/font_16"
            android:clickable="true"
            android:gravity="center"
            android:text="其他" />
    </RelativeLayout>
</LinearLayout>