<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
              android:background="@color/colorWhite"
              android:fitsSystemWindows="true"
              android:orientation="vertical">


    <com.hl.foundation.library.widget.CTopBar
        android:id="@+id/topbar"
        style="@style/style_topbar"
        app:mIsLeftShow="true"
        android:visibility="gone"
        app:mTitleText="@string/titile_member_list"/>


    <LinearLayout
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/colorTheme"
        android:padding="@dimen/dp_6">

        <com.hl.foundation.library.widget.CImageButton
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_6"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back"/>

        <EditText
            android:id="@+id/edt_search_key"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:layout_marginLeft="@dimen/dp_12"
            android:drawableBottom="@drawable/search_selector"
            android:gravity="center_vertical"
            android:hint="@string/equipment_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/font_12"
            tools:ignore="RtlHardcoded"/>
        <ImageView
            android:id="@+id/iv_search_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="8dp"
            android:visibility="gone"
            android:src="@drawable/cp_ic_search_clear"
            tools:ignore="ContentDescription"/>
        <com.hl.foundation.library.widget.CTextButton
            android:id="@+id/txt_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:textColor="@android:color/white"
            android:text="@string/search"
            android:textSize="@dimen/font_14"/>
    </LinearLayout>


    <View style="@style/divider_thin"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.hl.foundation.library.widget.ireyclerview.IRecyclerView
                android:id="@+id/irc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ebeced"
                app:loadMoreEnabled="true"
                app:refreshEnabled="true"
                app:refreshHeaderLayout="@layout/layout_irecyclerview_classic_refresh_header" />

            <com.hl.foundation.library.widget.LoadingTip
                android:id="@+id/loadedTip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center" />
        </FrameLayout>

    </RelativeLayout>


</LinearLayout>